# PI-RNN

./: .gitignore  README.md  pyproject.toml
PI_ESN/: oscilador_tensorflow.ipynb  pi_esn_vanderpol.ipynb
PI_ESN/experiments/ESN_01/: hyperparameters.txt
PI_ESN/experiments/ESN_02/: hyperparameters.txt
PI_ESN/experiments/ESN_03/: hyperparameters.txt
PI_ESN/experiments/PI_ESN_02/: hyperparameters.txt
PI_ESN/experiments/PI_ESN__20251116_0328/: hyperparameter_experiment_config.txt
PI_ESN/model_classes/: ESN.py  PIESN.py
PI_ESN/simulation/: input_signal_generator.py  split_data.py
PI_ESN/utils/: ESN.py  ESN_torch.py  input_signal_generator.py  van_der_pol_simulation.py
pi-esn-slides/: slides.md
