[project]
name = "pi-rnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.0",
]
